--- a/example/fdt.css
+++ b/example/fdt.css
@@ -1,3 +1,8 @@
+::highlight(match) {
+    background-color: orangered;
+    color: white;
+}
+
 @media print { .noprint { display:none; }}
 body { font-family: 'Times New Roman'; font-size:13pt; margin:10px 0px; padding:0px;}
 br { clear:both; }
